# puremvc-c-multicore-framework

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEV_GUIDE.md  Dockerfile  Doxyfile  LICENSE  README.md  VERSION  conanfile.py  conanfile.txt  conanfile_consumer.py  docker-compose.yml  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: puremvc-config.cmake.in  puremvcConfig.cmake.in
docs/: _controller_8c_source.html  _controller_8h_source.html  _facade_8c_source.html  _facade_8h_source.html  _i_command_8h.html  _i_command_8h_source.html  _i_controller_8h.html  _i_controller_8h_source.html  _i_facade_8h.html  _i_facade_8h_source.html  _i_macro_command_8h.html  _i_macro_command_8h_source.html  _i_mediator_8h.html  _i_mediator_8h_source.html  _i_model_8h.html  _i_model_8h_source.html  _i_notification_8h.html  _i_notification_8h_source.html  _i_notifier_8h.html  _i_notifier_8h_source.html  _i_observer_8h.html  _i_observer_8h_source.html  _i_proxy_8h.html  _i_proxy_8h_source.html  _i_view_8h.html  _i_view_8h_source.html  _macro_command_8c_source.html  _macro_command_8h_source.html  _mediator_8c_source.html  _mediator_8h_source.html  _model_8c_source.html  _model_8h_source.html  _notification_8c_source.html  _notification_8h_source.html  _notifier_8c_source.html  _notifier_8h_source.html  _observer_8c_source.html  _observer_8h_source.html  _proxy_8c_source.html  _proxy_8h_source.html  (+119 more)
docs/html/: _controller_8c_source.html  _controller_8h_source.html  _facade_8c_source.html  _facade_8h_source.html  _macro_command_8c_source.html  _macro_command_8h_source.html  _mediator_8c_source.html  _mediator_8h_source.html  _model_8c_source.html  _model_8h_source.html  _notification_8c_source.html  _notification_8h_source.html  _notifier_8c_source.html  _notifier_8h_source.html  _observer_8c_source.html  _observer_8h_source.html  _proxy_8c_source.html  _proxy_8h_source.html  _simple_command_8c_source.html  _simple_command_8h_source.html  _view_8c_source.html  _view_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_0a47af76b3074e716d338dca039d1232.html  dir_145f3c8675e801f1f0c5e653d69f76ff.html  dir_15ee5a604fe87dc62013df044e624754.js  dir_3b2196a4b9a362aba18896d94db6cdd3.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68837f44139e717e67cf1b686578af20.html  dir_7126e7dd161055d9ce4282624de7f7d6.html  dir_72b16ff6c9323f9734eb4e8c35a1cd62.html  dir_74bfbf22c075ed1cf6dd91264aa13d8a.js  dir_7c1813b2a8f733374e85d25765360dd6.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_c33d84089e3ce76362c6bf2f5b808414.html  dir_de8e9e3479f561136e56fab177327e43.js  dir_ee3f1a7951c308657a65f8199076c1d6.html  dir_efbff098e028766650896bda63e7077c.html  (+46 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  searchdata.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  (+5 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  searchdata.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  variables_2.js  (+12 more)
include/: Mutex2.h
include/puremvc/: ICommand.h  IController.h  IFacade.h  IMacroCommand.h  IMediator.h  IModel.h  INotification.h  INotifier.h  IObserver.h  IProxy.h  IView.h  puremvc.h
src/core/: Controller.c  Controller.h  Model.c  Model.h  View.c  View.h
src/interfaces/: Controller.h  Facade.h  List.h  MacroCommand.h  Map.h  Mediator.h  Model.h  Notification.h  Notifier.h  Observer.h  Proxy.h  SimpleCommand.h  View.h
src/patterns/collection/: List.c  Map.c
src/patterns/command/: MacroCommand.c  MacroCommand.h  SimpleCommand.c  SimpleCommand.h
src/patterns/facade/: Facade.c  Facade.h  Notifier.c
src/patterns/mediator/: Mediator.c  Mediator.h
test/: CMakeLists.txt
test/core/: ControllerTest.c  ControllerTest.h  ControllerTestCommand.c  ControllerTestCommand.h  ControllerTestCommand2.c  ControllerTestCommand2.h  ControllerTestVO.c  ControllerTestVO.h  ModelTest.c  ModelTest.h  ModelTestProxy.c  ModelTestProxy.h  ModelTestProxy2.c  ModelTestProxy2.h  ViewTest.c  ViewTest.h  ViewTestComponent.c  ViewTestMediator.c  ViewTestMediator.h  ViewTestMediator2.c  ViewTestMediator2.h  ViewTestMediator3.c  ViewTestMediator3.h  ViewTestMediator4.c  ViewTestMediator4.h  ViewTestMediator5.c  ViewTestMediator5.h  ViewTestMediator6.c  ViewTestMediator6.h  ViewTestNote.c  ViewTestNote.h
test/patterns/collection/: ListTest.c  ListTest.h  MapTest.c  MapTest.h
test/patterns/command/: MacroCommandTest.c  MacroCommandTest.h  MacroCommandTestCommand.c  MacroCommandTestCommand.h  MacroCommandTestCommand2.c  MacroCommandTestCommand2.h  MacroCommandTestSub1Command.c  MacroCommandTestSub1Command.h  MacroCommandTestSub2Command.c  MacroCommandTestSub2Command.h  MacroCommandTestSub3Command.c  MacroCommandTestSub3Command.h  MacroCommandTestVO.c  MacroCommandTestVO.h  SimpleCommandTest.c  SimpleCommandTest.h  SimpleCommandTestCommand.c  SimpleCommandTestCommand.h  SimpleCommandTestVO.c  SimpleCommandTestVO.h
test/patterns/facade/: FacadeTest.c  FacadeTest.h  FacadeTestCommand.c  FacadeTestCommand.h  FacadeTestVO.c  FacadeTestVO.h  NotifierTest.c  NotifierTest.h
test/patterns/mediator/: MediatorTest.c  MediatorTest.h
test/patterns/observer/: NotificationTest.c  NotificationTest.h  NotifierTest.c  NotifierTest.h  ObserverTest.c  ObserverTest.h
test/patterns/proxy/: ProxyTest.c  ProxyTest.h
(+8 files in other folders)
